misc changes like making variables final, using @Setters/@Getters, inlining stuff, and some other basic stuff intellij indicates/warnings, aaand remove boolean autoboxing